samples/_failures_safe/1761368178_b167e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30057f51.c: In function ‘print_token’:
./samples/SAFE/__tmp_30057f51.c:178:12: error: missing terminating " character
  178 |     printf("
      |            ^
./samples/SAFE/__tmp_30057f51.c:178:5: error: expected expression at end of input
  178 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_30057f51.c:178:5: error: expected declaration or statement at end of input
